23_architectures/arc2/kubernetes/flight/flight-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight
  namespace: aodb
spec:
  replicas: 5
  selector:
    matchLabels:
      app: flight
      version: 'v1'
  template:
    metadata:
      labels:
        app: flight
        version: 'v1'
    spec:
      containers:
        - name: flight-app
          image: eamonfoy/flight
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 120
